# LAOSTO-Topology-MSc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.ipynb  plot.py  plot_check_model.py  plot_new.ipynb  plot_old.ipynb
include/: ArmaSparseSolver.h  LAOSTO.h  LAOSTOMatrixBased.h  LAOSTO_exts.h  System2D.h  System2DCalculations.h  System2DCalculationsPrinter.h  System2DElementBased.h  System2DMatrixBased.h  ToyModel.h  ToyModelElementBased.h  ToyModelMatrixBased.h  utils.h
src/: LAOSTO.cpp  LAOSTOMatrixBased.cpp  LAOSTO_exts.cpp  System2D.cpp  System2DCalculations.cpp  System2DCalculationsPrinter.cpp  System2DElementBased.cpp  System2DmatrixBased.cpp  ToyModel.cpp  ToyModelElementBased.cpp  ToyModelMatrixBased.cpp  utils.cpp
